# rust-ws-server

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
examples/: mint-token.rs
examples/web-client/: index.html
grafana/: dashboard.json
src/: api.rs  auth.rs  config.rs  ip_limiter.rs  lib.rs  main.rs  metrics.rs  protocol.rs  server.rs  state.rs
tests/: websocket.rs
