[package]
name = "rust-ws-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
dotenvy = "0.15"
futures-util = "0.3"
humantime = "2"
humantime-serde = "1"
jsonwebtoken = "9"
parking_lot = "0.12"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio-tungstenite = "0.26"
url = "2"
